// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[Contrib] elements/<Button /> should match snapshot 1`] = `
<div>
  <button
    class="sc-bdVaJa sc-EHOje Button-sc-1bpx84u-0 gJobgy"
    color="var(--color-lapis-lazuli)"
  />
</div>
`;

exports[`[Contrib] elements/<Button /> should match snapshot with \`disabled\` prop 1`] = `
<div>
  <button
    class="sc-bdVaJa sc-EHOje Button-sc-1bpx84u-0 bdMFQc"
    color="var(--color-lapis-lazuli)"
    disabled=""
  />
</div>
`;

exports[`[Contrib] elements/<Button /> should match snapshot with \`hasGroup\` prop 1`] = `
<div>
  <button
    class="sc-bdVaJa sc-EHOje Button-sc-1bpx84u-0 jLNIOx"
    color="var(--color-lapis-lazuli)"
  />
</div>
`;

exports[`[Contrib] elements/<Button /> should match snapshot with \`isSmall\` prop 1`] = `
<div>
  <button
    class="sc-bdVaJa sc-EHOje Button-sc-1bpx84u-0 dlkznb"
    color="var(--color-lapis-lazuli)"
  />
</div>
`;

exports[`[Contrib] elements/<Button /> should match snapshot with a custom \`color\` prop 1`] = `
<div>
  <button
    class="sc-bdVaJa sc-EHOje Button-sc-1bpx84u-0 hldtVS"
    color="var(--color-periwinkle)"
  />
</div>
`;

exports[`[Contrib] elements/<Button /> should match snapshot with a set \`icon\` prop 1`] = `
<div>
  <button
    class="sc-bdVaJa sc-EHOje Button-sc-1bpx84u-0 gluGhQ"
    color="white"
  >
    <svg
      aria-hidden="true"
      class="svg-inline--fa fa-sync fa-w-16 fa-1x fa-rotate-null fa-pull-null Icon-sc-4jlog9-0 hXLKsx"
      color="var(--color-lapis-lazuli)"
      data-icon="sync"
      data-prefix="fas"
      focusable="false"
      role="img"
      viewBox="0 0 512 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M440.65 12.57l4 82.77A247.16 247.16 0 0 0 255.83 8C134.73 8 33.91 94.92 12.29 209.82A12 12 0 0 0 24.09 224h49.05a12 12 0 0 0 11.67-9.26 175.91 175.91 0 0 1 317-56.94l-101.46-4.86a12 12 0 0 0-12.57 12v47.41a12 12 0 0 0 12 12H500a12 12 0 0 0 12-12V12a12 12 0 0 0-12-12h-47.37a12 12 0 0 0-11.98 12.57zM255.83 432a175.61 175.61 0 0 1-146-77.8l101.8 4.87a12 12 0 0 0 12.57-12v-47.4a12 12 0 0 0-12-12H12a12 12 0 0 0-12 12V500a12 12 0 0 0 12 12h47.35a12 12 0 0 0 12-12.6l-4.15-82.57A247.17 247.17 0 0 0 255.83 504c121.11 0 221.93-86.92 243.55-201.82a12 12 0 0 0-11.8-14.18h-49.05a12 12 0 0 0-11.67 9.26A175.86 175.86 0 0 1 255.83 432z"
        fill="currentColor"
      />
    </svg>
  </button>
</div>
`;
